# multica-py

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
.codebase-memory/: artifact.json  graph.db.zst
.githooks/: pre-commit
.github/workflows/: ci.yml  live-extended.yml  live-opencode-canary.yml  mutation.yml  package-test.yml  release.yml  upstream-contract-observer.yml  upstream-drift.yml
.specify/: feature.json  integration.json
.specify/extensions/: .registry
.specify/extensions/.cache/: catalog-ebf165086500aab1-metadata.json  catalog-metadata.json
.specify/integrations/: codex.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/integrations/.cache/: catalog-3ef71b1cc239a1c0-metadata.json  (+2 more)
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.speckit-chat/: decision-log.md  source-notes.md  state.json
artifacts/upstream-upgrades/: .gitkeep
contracts/: multica-live-target.toml  sdk-contract.json
contracts/output/: agent-create-v1.json  agent-list-v1.json  issue-list-v1.json
contracts/schema/: upstream-contract-v2.schema.json  upstream-report-v1.schema.json
docs/: api.md  cli-coverage.md  compatibility.md  contributing.md  releasing.md  service-usage.md
examples/: fastapi_adapter.py  self_hosted_local.py  temporal_activity.py
scripts/: _loc_metrics.py  audit_source_links.py  capture_test_baseline.py  check_coverage.py  check_test_architecture.py  check_test_baseline.py  check_upstream_drift.py  cleanup_live_resources.py  live_compatibility_report.py  resolve_multica_target.py  run_live_tests.py  scan_live_artifacts.py  upstream_contract.py  upstream_upgrade.sh
specs/001-full-cli-sdk/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-upstream-coverage-checks/: REVIEW_FIXES.md  constitution-reference.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-multica-live-integration-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-test-suite-optimization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-test-suite-agent-sandbox/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-test-suite-consolidation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-upstream-v0-4-9-migration/: HANDOFF.md  research.md  spec.md
src/multica_py/: __init__.py  client.py  compatibility.py  config.py  enums.py  exceptions.py  process.py  sentinels.py  types.py
tests/: _manifest_coverage.py  _manifest_support.py  behavioral-coverage.json  conftest.py  duplicate-removal-map.json  quality-baseline.json
tests/cases/: __init__.py  argv_data.py  assertions.py  errors.py  execution.py  models.py  operations.py
tests/component/: command_cases.py  conftest.py  resource_payloads.py  resource_support.py  test_cli_errors.py  test_cli_roundtrip.py  test_client_isolation.py  test_fake_cli.py  test_fake_opencode_process.py  test_issue_project_assignment.py  test_process_contract.py  test_project_resources.py  test_service_safety.py  test_streaming_commands.py
tests/contract/: conftest.py  mutation_severity_cases.py  test_ci_profiles.py  test_cli_manifest.py  test_full_cli_coverage.py  test_issue_models.py  test_live_target_workflows.py  test_public_invariants.py  test_upstream_contract_actions.py  test_upstream_contract_apply_suggestions.py  test_upstream_contract_argv.py  test_upstream_contract_check.py  test_upstream_contract_collect.py  test_upstream_contract_diff.py  test_upstream_contract_output.py  test_upstream_contract_prepare_upgrade.py  test_upstream_contract_promotion.py  test_upstream_contract_quickstart.py  test_upstream_contract_workflows.py  test_upstream_inventory.py
tests/fixtures/: child_process.py  fake_multica.py  fake_opencode.py  fake_opencode_helpers.py  process_state.py
tests/integration/: conftest.py  test_cancellation.py  test_issue_workflows.py  test_process_lifecycle.py  test_streaming_commands.py
tests/live/: .env.example  README.md  __init__.py  _bootstrap.py  _live_helpers.py  api.py  backend.py  bootstrap.py  compose.py  conftest.py  context.py  crud_descriptors.py  diagnostics.py  environment.py  exceptions.py  live_operations.py  operations.py  oracle.py  profile.py  registry.py  resource_registry.py  resources.py  sdk_compat.py  session.py  settings.py  test_agent_sandbox.py  test_bootstrap.py  test_crud.py  test_errors.py  test_issue_workflow.py  test_labels.py  test_live_command_coverage.py  test_oracle_consistency.py  test_projects.py  test_workspace_isolation.py
tests/packaging/: conftest.py  test_artifact_contents.py  test_artifacts.py  test_build.py  test_import_smoke.py  test_installation.py  test_wheel_install.py
tests/typing/: test_client_api.py
tests/unit/: conftest.py  test_canary_environment.py  test_client_lifecycle.py  test_compat_policy.py  test_compatibility.py  test_console_cli.py  test_decoders.py  test_fake_opencode.py  test_live_api.py  test_live_bootstrap.py  test_live_compatibility_report.py  test_live_compose.py  test_live_crud_descriptors.py  test_live_diagnostics.py  test_live_mutation_cases.py  test_live_naming.py  test_live_oracle.py  test_live_profile.py  test_live_resource_registry.py  test_live_sandbox.py  test_live_sandbox_support.py  test_live_settings.py  test_live_support_tools.py  test_path_normalization.py  test_process_state.py  test_project_resource_models.py  test_quality_baseline_tools.py  test_resolve_multica_target.py  test_scan_live_artifacts.py  test_test_architecture.py  test_transport.py  test_transport_errors.py  test_upstream_contract_coverage.py  test_upstream_contract_diff.py  test_upstream_contract_files.py  test_upstream_contract_generator.py  test_upstream_contract_impact.py  test_upstream_contract_mismatch.py  test_upstream_contract_observer.py  test_upstream_contract_promotion.py  (+8 more)
tools/live_support/: __init__.py  diagnostics.py  environment.py  oracle.py
tools/upstream-cli-contract/: README.md
(+291 files in other folders)
