[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multica-py"
version = "0.1.0"
description = "Python SDK for the Multica CLI"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "multica-py contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "msgspec>=0.19,<2",
]

[project.urls]
Homepage = "https://github.com/maximchikAlexandr/multica-py"
Repository = "https://github.com/maximchikAlexandr/multica-py"
Documentation = "https://github.com/maximchikAlexandr/multica-py"

[tool.hatch.build.targets.wheel]
packages = ["src/multica_py"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "scripts",
    "tools/live_support",
    "docs",
    ".github",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
    "ruff.toml",
    "uv.lock",
]
exclude = [
    ".codebase-memory/**",
    ".devlocal/**",
    ".opencode/**",
    ".speckit-chat/**",
    "**/__pycache__/**",
    "**/*.pyc",
    "**/node_modules/**",
    "build/**",
    "dist/**",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
timeout = 30
timeout_method = "signal"
addopts = "-v --tb=short --strict-markers -m \"not live and not packaging\""
markers = [
    "unit: unit-layer tests",
    "contract: contract-layer tests",
    "component: component-layer fake CLI and process tests",
    "packaging: packaging validation tests",
    "process: real subprocess contract tests",
    "compat: cross-platform compatibility subset",
    "serial: must run without xdist parallelism",
    "live: requires real Multica CLI and backend",
    "live_smoke: blocking compact live suite (implies live)",
    "live_extended: scheduled or manual extended live suite (implies live)",
    "live_opencode_canary: real OpenCode provider canary (implies live)",
    "destructive: stops backend or mutates process state",
]
filterwarnings = [
    "error",
    "ignore:--include is ignored because --source is set:coverage.exceptions.CoverageWarning",
]
log_cli_level = "WARNING"

[tool.coverage.run]
source = ["multica_py"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.coverage.regexs]
transport = "multica_py/_internal/transport\\.py$"
models = "multica_py/models/.*"
resources = "multica_py/resources/.*"
errors = "multica_py/exceptions\\.py$"

[tool.coverage.thresholds]
transport = 80
models = 90
resources = 70
errors = 95

[tool.mypy]
strict = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
warn_return_any = true
warn_unreachable = true
python_version = "3.12"
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]
ignore_missing_imports = true
follow_imports = "silent"

[dependency-groups]
test = ["pytest>=8", "pytest-cov>=5", "pytest-xdist>=3,<4", "httpx>=0.27", "pytest-timeout>=2.4,<3"]
mutation = ["mutmut>=3,<4"]
lint = ["ruff>=0.4"]
type-check = ["mypy>=1.8"]

[tool.mutmut]
paths_to_mutate = [
  "src/multica_py/_internal/transport.py",
  "src/multica_py/_internal/decoders.py",
  "src/multica_py/exceptions.py",
  "src/multica_py/_internal/redaction.py",
  "src/multica_py/config.py",
]
tests_dir = ["tests/unit", "tests/component"]
also_copy = ["scripts", "contracts", "tools", "src"]
runner = "uv run pytest -x -q -m 'not live and not serial'"

[[tool.mypy.overrides]]
module = ["msgspec"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.conftest",
    "tests.contract.conftest",
    "tests.contract.upstream.*",
    "tests.unit.*",
    "tests.component.*",
    "tests.cases.*",
    "tests.packaging.*",
    "tests.contract.test_public_invariants",
    "tests.live.*",
]
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = true
disallow_untyped_defs = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
warn_return_any = false
